Backport to v2.4:

*) mod_deflate: Add DeflateAlterETag to control how the ETag
     is modified. The 'NoChange' parameter mimics 2.2.x behavior.
     PR 45023, PR 39727.
     Trunk version of patch:
        https://svn.apache.org/r1586542
     Backport version for 2.4.x of patch:
      https://raw.githubusercontent.com/jfclere/patch/main/mod_deflate.patch
     +1: jfclere, rpluem, ylavic
     rpluem says: Does anyone know why we don't merge the server config?



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1911075 13f79535-47bb-0310-9956-ffa450edef68